--- a/temp_messenger/templates/home.html
+++ b/temp_messenger/templates/home.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+    <script src="https://code.jquery.com/jquery-latest.js"></script>
+</head>
 <body>
     {% if messages %}
         {% for message in messages %}
@@ -7,5 +10,29 @@
     {% else %}
         <p>No messages!</p>
     {% endif %}
+
+    <form action="/messages" id="postMessage">
+        <input type="text" name="message" placeholder="Post Message">
+        <input type="submit" value="Post">
+    </form>
+
+    <script>
+        $( "#postMessage" ).submit(function( event ){
+            event.preventDefault();
+
+            var $form = $( this ),
+            message = $form.find( "input[name='message']").val(),
+            url = $form.attr( "action" );
+
+            $.ajax({
+                type: 'POST',
+                url: url,
+                data: JSON.stringify({message: message}),
+                contentType: "application/json",
+                dataType: 'json',
+                success: function() {location.reload();}
+            });
+        });
+    </script>
 </body>
 
